swen430as2/test_files/valid/unions/UnionType_Valid_01.while
type egunion is int|null

void main() {
    assert 1 == 1;
}
