swen430as2/test_files/invalid/is/Is_Invalid_02-TC01.while
void main() {
    int|null x = 0;
    assert x is null|bool;
}
